--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
-name: Your New Jekyll Site
-description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
+name: \art 2018
+description: Blogging about the creative process
+meta_description: "\\art 2018"
 
 markdown: kramdown
 highlighter: pygments
 logo: false
-paginate: 15
+paginate: 10
 baseurl: /
-domain_name: 'http://yourblog-domain.com'
+domain_name: 'http://backslashart.github.io'
 google_analytics: 'UA-XXXXXXXX-X'
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
 
 # Details for the RSS feed generator
-url:            'blog url'
-author:         'Your Name'
+url:            'http://backslashart.github.io'
+author:         'Christy Cui, Jacob Lee'
